[2025-03-27 09:46:02]	No se encontró una version válida	Nuevas vistas incluidas modales
[2025-03-27 10:16:02]	No se encontró una version válida	Mejora en pantalla de desbloqueo
[2025-03-27 10:49:05]	No se encontró una version válida	Ventas modales genericas
[2025-03-27 11:07:21]	No se encontró una version válida	Mejoras en un modal
[2025-03-27 11:47:38]	No se encontró una version válida	Automatic update
[2025-03-27 12:08:57]	No se encontró una version válida	Completadas ventanas modales
[2025-03-27 12:21:25]	No se encontró una version válida	Automatic update
[2025-03-27 12:54:02]	No se encontró una version válida	Badge de Cart en Calc ya casi... falta counter
[2025-03-27 13:22:25]	No se encontró una version válida	Automatic update
[2025-03-27 13:25:08]	No se encontró una version válida	Automatic update
[2025-03-27 14:42:58]	No se encontró una version válida	Automatic update
[2025-03-27 15:30:13]	No se encontró una version válida	Automatic update
[2025-03-27 22:29:31]	No se encontró una version válida	Aun sin lograre se vea el total el boton de Pagar :(
[2025-03-27 22:54:16]	No se encontró una version válida	Aunque sigue sin mostrarse el TOTAL junto a PAGAR es version estable --compila--
[2025-03-27 23:36:13]	No se encontró una version válida	Cambio de colores para botones. Editado themes.xml
[2025-03-28 08:06:26]	No se encontró una version válida	Solucionado Backspace button en Calc y otras vista
[2025-03-28 21:32:23]	No se encontró una version válida	Version inestable (sin verificar si compila)
[2025-03-28 22:05:05]	No se encontró una version válida	Compila pero aborta (ver inestable)
[2025-03-29 00:15:33]	No se encontró una version válida	Compila OK
[2025-04-04 17:13:08]	No se encontró una version válida	Resueltos varios problemas con margenes que afectaban navbars arriba y abajo
[2025-04-04 18:29:19]	No se encontró una version válida	Queda hablitado boton de retroceso en el ActionBar
[2025-04-04 19:13:15]	No se encontró una version válida	Navegable