@@ -23,7 +23,7 @@ class MainActivity : AppCompatActivity()
         super.onCreate(savedInstanceState)
 
         binding = ActivityMainBinding.inflate(layoutInflater)
-    setContentView(binding.root)
+        setContentView(binding.root)
 
         val navView: BottomNavigationView = binding.navView
 
