@@ -28,3 +28,4 @@
 [2025-04-04 17:13:08]	No se encontró una version válida	Resueltos varios problemas con margenes que afectaban navbars arriba y abajo
 [2025-04-04 18:29:19]	No se encontró una version válida	Queda hablitado boton de retroceso en el ActionBar
 [2025-04-04 19:13:15]	No se encontró una version válida	Navegable
+[2025-04-05 09:56:18]	No se encontró una version válida	Android Manifest con mas permisos
